--- a/src/main/resources/static/css/techjobs.css
+++ b/src/main/resources/static/css/techjobs.css
@@ -44,3 +44,19 @@ label {
 .centered {
     text-align: center;
 }
+
+p {
+    vertical-align: top;
+    margin-left: 30px;
+}
+
+.centeredTable {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+div.job-listing {
+    border: 1px solid #e4e4e4;
+    width: 80%;
+    background-color: #e4e4e4;
+}
