--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -14,44 +14,26 @@
     <table class="job-listing">
         <tr th:each="job : ${jobs}">
             <td>
-                <p th:text="${'ID: ' + job.id}"></p>
+                <p>
+                    Job Id:
+                    <a th:href="@{'/view/' + ${job.id}}" th:text="${job.id}"></a>
+                </p>
                 <p th:text="${'Name: ' + job.name}"></p>
-                <p th:text="${'Employer: ' + job.employer}"></p>
-                <p th:text="${'Location: ' + job.location}"></p>
-                <p th:text="${'Position Type: ' + job.positionType}"></p>
-                <p th:text="${'Skill: ' + job.coreCompetency}"></p>
+                <p>
+                    Employer:
+                    <a th:href="@{'/employers/view/' + ${job.employer.id}}" th:text="${job.employer.name}"></a>
+                </p>
+                <p>
+                    Skills:
+                    <ul th:each="skill : ${job.skills}">
+                        <li>
+                            <a th:href="@{'/skills/view/' + ${skill.id}}" th:text="${skill.name}"></a>
+                        </li>
+                    </ul>
+                </p>
             </td>
         </tr>
     </table>
-
-    <!-- Alternate table option: -->
-
-    <!--    <table th:each = "job : ${jobs}" class="job-listing">-->
-    <!--        <tr>-->
-    <!--            <th>ID</th>-->
-    <!--            <td th:text="${job.id}"></td>-->
-    <!--        </tr>-->
-    <!--        <tr>-->
-    <!--            <th>Name</th>-->
-    <!--            <td th:text="${job.name}"></td>-->
-    <!--        </tr>-->
-    <!--        <tr>-->
-    <!--            <th>Employer</th>-->
-    <!--            <td th:text="${job.employer}"></td>-->
-    <!--        </tr>-->
-    <!--        <tr>-->
-    <!--            <th>Location</th>-->
-    <!--            <td th:text="${job.location}"></td>-->
-    <!--        </tr>-->
-    <!--        <tr>-->
-    <!--            <th>Position Type</th>-->
-    <!--            <td th:text="${job.positionType}"></td>-->
-    <!--        </tr>-->
-    <!--        <tr>-->
-    <!--            <th>Skill</th>-->
-    <!--            <td th:text="${job.coreCompetency}"></td>-->
-    <!--        </tr>-->
-    <!--    </table>-->
 
 </div>
 
