--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -41,12 +41,24 @@
     <table class="job-listing">
         <tr th:each="job : ${jobs}">
             <td>
-                <p th:text="${'ID: ' + job.getId()}"></p>
-                <p th:text="${'Name: ' + job.getName()}"></p>
-                <p th:text="${'Employer: ' + job.getEmployer()}"></p>
-                <p th:text="${'Location: ' + job.getLocation()}"></p>
-                <p th:text="${'Position Type: ' + job.getPositionType()}"></p>
-                <p th:text="${'Skill: ' + job.getCoreCompetency()}"></p>
+                <p>
+                    Job Id:
+                    <a th:href="@{'/view/' + ${job.id}}" th:text="${job.id}"></a>
+                </p>
+                <p th:text="${'Name: ' + job.name}"></p>
+                <p>
+                    Employer:
+                    <a th:href="@{'/employers/view/' + ${job.employer.id}}" th:text="${job.employer.name}"></a>
+                </p>
+                <p>
+                    Skills:
+                    <ul th:each="skill : ${job.skills}">
+                      <li>
+                          <a th:href="@{'/skills/view/' + ${skill.id}}" th:text="${skill.name}"></a>
+                      </li>
+                    </ul>
+                </p>
+
             </td>
         </tr>
     </table>
